--- a/views/shop/product-detail.edge
+++ b/views/shop/product-detail.edge
@@ -9,10 +9,11 @@
         <img src="{{product.imageUrl}}" alt="{{product.title}}">
       </div>
     </div>
-      <h2>${{product.price}}</h2>
-      <p>{{product.description}}</p>
+      <h2 class="mt-1"><span class="text-light">Price: </span>${{product.price}}</h2>
+      <p class="mb-1"><span class="text-light">Description: </span>{{product.description}}</p>
       <form action="/cart" method="POST">
         <button type="submit" class="btn">Add to cart</button>
+        <input type="hidden" name="productId" value="{{ product.id }}">
       </form>
   </div>
 @endsection
