--- a/views/shop/index.edge
+++ b/views/shop/index.edge
@@ -24,7 +24,7 @@
         </div>
 
         <div class="card-actions">
-          <button class="btn">Add to cart</button>
+          @include('inc.add-to-cart')
         </div>
       </article>
     @endeach
