--- a/views/shop/product-list.edge
+++ b/views/shop/product-list.edge
@@ -25,9 +25,7 @@
 
         <div class="card-actions">
           <a href="/products/{{product.id}}" class="btn mb-1">Details</a>
-          <form action="/add-to-cart" method="POST">
-            <button class="btn">Add to cart</button>
-          </form>
+          @include('inc.add-to-cart')
         </div>
       </article>
     @endeach
