--- a/views/admin/products.edge
+++ b/views/admin/products.edge
@@ -24,7 +24,7 @@
         </div>
 
         <div class="card-btn-group">
-          <a href="/admin/edit-product" class="edit-btn">Edit</a>
+          <a href="/admin/edit-product/{{product.id}}?edit=true" class="edit-btn">Edit</a>
           <form action="/admin/delete-product" method="POST">
             <button class="delete-btn">Delete</button>
           </form>
